# speechd

./: .gitignore  pyproject.toml
contrib/: example.config.toml  example.i3status-rs.toml  wl-insert-text
scripts/: speechd-toggle
src/speechd/: __init__.py  __main__.py  config.py  daemon.py  pipeline.py  preview.py  recorder.py  speechd.py  speechd.service  transcribe.py
src/speechd/app/: config.py  daemon.py  preview.py  recorder.py
src/speechd/engine/: __init__.py  groq.py
src/speechd/post/: __init__.py  deemdasher.py  pipeline.py  stylizer.py
src/speechd/pre/: __init__.py  agc.py  pipeline.py  vad.py
src/speechd/preprocessing/: __init__.py  agc.py  pipeline.py  vad.py
