[project]
name = "speechd"
version = "1.2.9"
description = "Speech-to-Text daemon with Groq Whisper API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "groq>=0.4.0",
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[project.scripts]
speechd = "speechd.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/speechd"]
include = ["src/speechd/*.service"]

[tool.hatch.build.targets.wheel.shared-scripts]
"scripts/speechd-toggle" = "speechd-toggle"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
