[project]
name = "speechd"
version = "1.4.0"
description = "Speech-to-Text daemon with Groq Whisper API"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "groq>=0.4.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "pyloudnorm>=0.1.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[project.scripts]
speechd = "speechd.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/speechd"]
include = ["src/speechd/*.service"]

[tool.hatch.build.targets.wheel.shared-scripts]
"scripts/speechd-toggle" = "speechd-toggle"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
